--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.9.12"
+    "hono": "^4.9.12",
+    "yahoo-finance2": "^3.10.0"
   },
   "devDependencies": {
     "wrangler": "^4.43.0"
