--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -3,6 +3,10 @@ main = "src/index.ts"
 compatibility_date = "2025-10-13"
 compatibility_flags = ["nodejs_compat"]
 
+[[rules]]
+type = "Text"
+globs = ["**/*.csv"]
+
 [assets]
 directory = "../frontend/dist"
 binding = "ASSETS"
