--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -6,6 +6,7 @@ compatibility_flags = ["nodejs_compat"]
 [[rules]]
 type = "Text"
 globs = ["**/*.csv"]
+fallthrough = false
 
 [assets]
 directory = "../frontend/dist"
